fix: Ability to scroll Search / Task List on mobile devices

--- a/src/components/OrgFile/components/TaskListModal/stylesheet.css
+++ b/src/components/OrgFile/components/TaskListModal/stylesheet.css
@@ -3,10 +3,6 @@
 /* Currently, the markup is the same as in the AgendaModal component.
  * Hence the CSS rules from there apply. */
 
-.task-list__headers-container {
-  overflow: auto;
-}
-
 .task-list__filter-input,
 .task-list__filter-input-invalid {
   box-sizing: border-box;
